<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trip planner</string>
    <string name="email">Email</string>

    <string name="password">123</string>
    <string name="forgot_password"><u>forgot_password</u></string>
    <string name="Password">Password</string>
    <string name="a_quick_question_to_help_us_improve_travelspend">A quick question to help us improve TravelSpend</string>
    <string name="backpacker">Backpacker</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="group">Group</string>
    <string name="business">Business</string>
    <string name="other">Other</string>

    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="mot_de_pass">Password</string>
    <string name="password_verification">Password verification</string>
    <string name="create_account">Create account</string>
    <string name="have_an_account">Don\'t have an account\? Create one</string>
    <string name="wishing_you_safe_and_happy_travels">Wishing you safe and happy travels\!</string>
    <string name="reset_password">Reset Password</string>

    <string-array name="travel_styles">
        <item>Backpacker</item>
        <item>Couple</item>
        <item>Family</item>
        <item>Group</item>
        <item>Business</item>
    </string-array>

    <!-- signupActivity -->
    <string name="invalid_email">Invalid email</string>
    <string name="what_s_your_travel_styl_">What\'s your travel style\?</string>
    <string name="Or_maybe_a_different_style">Or maybe a different style\?</string>
    <string name="add_new_trip">ADD NEW TRIP</string>
    <string name="name_your_trip">Name your tripModel</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="next">NEXT</string>
    <string name="text_not_null">TEXT NOT NULL </string>
    <string name="my_app">My App</string>
    <string name="menu">Menu</string>
    <string name="informations_saisies">Informations saisies:</string>
    <string name="user">User</string>
    <string name="menu_button_description">Menu button</string>
    <string name="Menu">menu</string>
    <string name="currency">Currency</string>
    <string name="trip_location">Trip location</string>
    <string name="quick">A quick question to help us improve TravelSpend</string>
    <string name="what_s_your_travel_style">What\'s your travel style?</string>
    <string name="backpacker2">Backpacker</string>
    <string name="couple2">Couple</string>
    <string name="family2">Family</string>
    <string name="group2">Group</string>
    <string name="business2">Business</string>
    <string name="submit2">Submit</string>
    <string name="skip">SKIP</string>
    <string name="or_maybe_a_different_style2">Or maybe a different style.?</string>
    <string name="trip_date">Trip date</string>
    <string name="destination">Destination</string>
    <string name="trip_name">Trip name</string>
    <string name="todo">TODO</string>
    <string name="email2">Email</string>
    <string name="user2">User</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
</resources>
