<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bd">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sky_blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/my_app">

        <!-- Bouton pour afficher la liste des voyages déjà visités -->
        <ImageButton
            android:id="@+id/visited_trips_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minHeight="48dp"
            android:src="@drawable/baseline_format_list_bulleted_24"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:divider="@null"
        android:dividerHeight="100dp"
        android:listSelector="@drawable/list_selector"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="133dp"
        android:layout_height="156dp"
        android:layout_below="@id/toolbar"
        android:layout_centerVertical="true"
        android:layout_marginTop="64dp"
        android:padding="16dp"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informations_saisies"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trip_name"
            android:layout_marginTop="20dp"
            android:text="@string/destination"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/destination"
            android:layout_marginTop="16dp"
            android:text="@string/trip_date"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_title"
            android:layout_marginTop="420dp"
            android:text="@string/trip_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>
