<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/topImage"
        android:layout_width="299dp"
        android:layout_height="271dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logiin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <EditText
        android:id="@+id/user_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:drawablePadding="5dp"
        android:hint="@string/user2"
        android:drawableStart="@drawable/baseline_person_24"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/topImage"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteY="290dp" />
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/user_edit_text"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteY="338dp" />



    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password2"
        android:textColor="@color/sky_blue2"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#176C5E"
        android:fontFamily="@font/semakin"
        android:padding="12dp"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        tools:ignore="ExtraText,HardcodedText,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="8dp"
        android:text="@string/have_an_account"
        android:textAllCaps="false"
        app:iconTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        tools:ignore="RtlHardcoded,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>